# NIMBUS_3000

./: .gitignore  CMakeLists.txt  KORISNIČKI_PRIRUČNIK.docx  Nimbus_3000.pptx  README.md  sdkconfig.defaults
Server/: README.md  (+5 more)
components/ui_app/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.slp  esp32_gui.spj  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_app/squareline/project/images/: ui_img_alarm_icon_png.c  ui_img_animals_png.c  ui_img_back_button_png.c  ui_img_bl_logo_symbol_png.c  ui_img_camera_icon_png.c  ui_img_cat_png.c  ui_img_colorwheel_icon_png.c  ui_img_cow_png.c  ui_img_dog_png.c  ui_img_forward_icon_png.c  ui_img_gallery_icon_png.c  ui_img_home_icon_png.c  ui_img_horse_png.c  ui_img_images_png.c  ui_img_pig_png.c  ui_img_plus_icon_png.c  ui_img_seal_png.c  ui_img_settings_icon_png.c  ui_img_sketchpad_icon_png.c  ui_img_speaker_png.c
components/ui_app/squareline/project/screens/: ui_Alarm_Ringing_Scr.c  ui_Alarm_Ringing_Scr.h  ui_Alarm_Scr.c  ui_Alarm_Scr.h  ui_Camera_Scr.c  ui_Camera_Scr.h  ui_Color_Scr.c  ui_Color_Scr.h  ui_Gallery_Scr.c  ui_Gallery_Scr.h  ui_Home_Scr.c  ui_Home_Scr.h  ui_KriviOdgovor.c  ui_KriviOdgovor.h  ui_MamaKontakt.c  ui_MamaKontakt.h  ui_PogodiKojaJeZivotinja.c  ui_PogodiKojaJeZivotinja.h  ui_PrimljenePoruke.c  ui_PrimljenePoruke.h  ui_Settings_Scr.c  ui_Settings_Scr.h  ui_Sketchpad_Scr.c  ui_Sketchpad_Scr.h  ui_TataKontakt.c  ui_TataKontakt.h  ui_TocanOdgovor.c  ui_TocanOdgovor.h  ui_Whats_Down.c  ui_Whats_Down.h  ui_Zivotinje.c  ui_Zivotinje.h
(+102 files in other folders)
